# Kia

./: README.md
1-Hardware/: Kia-Arm-Ctrl.kicad_dru  Kia-Arm-Ctrl.kicad_pcb  Kia-Arm-Ctrl.kicad_pro  Kia-Arm-Ctrl.kicad_sch
1-Hardware/SCHEMA/: Connectors.kicad_sch  IO.kicad_sch  MCU.kicad_sch  Power.kicad_sch
2-Firmware/: .clang-format  .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
2-Firmware/components/svc_comm/: CMakeLists.txt  comm_router.c  proto_binary.c  proto_text.c  svc_comm.c  transport_ble.c  transport_usb_cdc.c
2-Firmware/components/svc_comm/include/: proto_binary.h  proto_ops.h  proto_text.h  svc_comm.h
2-Firmware/main/: CMakeLists.txt  app_config.h  app_events.h  main.c
2-Firmware/tests/: CMakeLists.txt  README.md  sdkconfig.defaults
2-Firmware/tests/main/: CMakeLists.txt  test_cobs.c  test_crc32.c  test_kinematics.c  test_main.c  test_ringbuf.c  test_trajectory.c
2-Firmware/tools/: README.md  kia_cli.py
3-Software/: .gitignore  pyproject.toml  requirements.txt
3-Software/kia_studio/: __init__.py  __main__.py
3-Software/kia_studio/core/: __init__.py  animation.py  joints.py  kinematics.py  mesh_loader.py  sim.py  trajectory.py
3-Software/kia_studio/proto/: __init__.py  client.py  codec.py  framing.py  opcodes.py  transport.py
3-Software/kia_studio/resources/meshes/: Base1.stl  Bati.stl  Coude.stl  Epaule.stl  Poignet.stl
3-Software/kia_studio/resources/sequences/: mouvement.json
3-Software/kia_studio/ui/: __init__.py  main_window.py  mesh_config.py  qt_client.py  theme.py
3-Software/kia_studio/ui/widgets/: __init__.py  calib_panel.py  cartesian_panel.py  connection_bar.py  control_bar.py  joint_panel.py  telemetry_panel.py  timeline_panel.py  viewport3d.py  viewport_gl.py
3-Software/packaging/: KiaStudio.spec  build.py  build_installer.py  installer.iss  kia_studio_launcher.py  make_icon.py
3-Software/packaging/installer_out/: .gitignore
3-Software/tests/: test_animation.py  test_geometry.py  test_gui_smoke.py  test_ik.py  test_kinematics.py  test_mesh3d.py  test_proto.py  test_sim.py  test_trajectory.py
3-Software/tools/: render_arm.py  render_gl_arm.py
(+61 files in other folders)
